--- a/order-summary-component-main/public/index.css
+++ b/order-summary-component-main/public/index.css
@@ -24,9 +24,9 @@ main {
 	background-color: hsl(225, 100%, 98%);
 	margin: 1.5rem;
 	margin-top: 8rem;
-	gap: 1rem;
+	gap: 2rem;
 	text-align: center;
-	padding-bottom: 1rem;
+	padding-bottom: 2.5rem;
 }
 
 .illustration {
@@ -46,14 +46,24 @@ main {
 }
 
 .plan {
-	background-color: hsl(225, 100%, 94%);
+	background-color: hsl(224, 23%, 95%);
 	border-radius: 5px;
 	display: grid;
-	grid-template-rows: 25% 75%;
+	grid-template-rows: 25px auto;
 	grid-template-columns: 25% 50% 45%;
-	justify-content: center;
 	align-items: center;
-	padding: 0 1.5rem;
+	justify-content: center;
+	padding: 1rem 2rem;
+	width: 80%;
+}
+
+.plan img,
+.plan a {
+	margin-top: 1.5rem;
+}
+
+.plan a {
+	margin-left: 2rem;
 }
 
 .plan p {
@@ -77,7 +87,8 @@ button {
 	font-weight: 700;
 	border-radius: 10px;
 	padding: 1rem 5rem;
-	box-shadow: 0 5px 0px 0px hsl(225, 100%, 98%);
+	box-shadow: 0px 20px 20px 1px hsla(228.3, 48.2%, 43.9%, 0.32);
+	margin-bottom: 0.5rem;
 }
 
 .cancel {
