--- a/order-summary-component-main/public/index.css
+++ b/order-summary-component-main/public/index.css
@@ -12,6 +12,9 @@
 
 body {
 	background-color: hsl(225, 100%, 94%);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	font-family: "Red Hat Display", sans-serif;
 }
 
@@ -26,7 +29,8 @@ main {
 	margin-top: 8rem;
 	gap: 2rem;
 	text-align: center;
-	padding-bottom: 2.5rem;
+	padding-bottom: 2rem;
+	max-width: 400px;
 }
 
 .illustration {
@@ -42,7 +46,8 @@ main {
 
 .subtitle {
 	font-size: 1.2rem;
-	color: hsl(225, 100%, 94);
+	color: hsl(224, 23%, 55%);
+	padding: 0 1.5rem;
 }
 
 .plan {
@@ -50,10 +55,10 @@ main {
 	border-radius: 5px;
 	display: grid;
 	grid-template-rows: 25px auto;
-	grid-template-columns: 25% 50% 45%;
+	grid-template-columns: auto 120px 50%;
 	align-items: center;
 	justify-content: center;
-	padding: 1rem 2rem;
+	padding: 1.5rem 3rem;
 	width: 80%;
 }
 
@@ -93,4 +98,33 @@ button {
 
 .cancel {
 	font-weight: 700;
+	color: hsl(224, 23%, 55%);
+}
+
+@media (min-width: 1440px) {
+	body {
+		background-image: url("images/pattern-background-desktop.svg");
+		background-repeat: no-repeat;
+		background-size: contain;
+	}
+
+	.subtitle {
+		padding: 0 3rem;
+	}
+
+	.proceed {
+		width: 80%;
+	}
+
+	main {
+		max-width: 500px;
+		margin-top: 100px;
+	}
+}
+
+@media (min-width: 2160px) {
+	body {
+		background-size: cover;
+		background-position: bottom 400px left 0px;
+	}
 }
