--- a/faq-accordion-card-main/public/index.css
+++ b/faq-accordion-card-main/public/index.css
@@ -15,6 +15,7 @@ body {
 	width: 100%;
 	height: 100%;
 	font-family: "Kumbh Sans", sans-serif;
+	overflow-x: hidden;
 }
 
 main {
@@ -30,36 +31,38 @@ main {
 .faq-ctn {
 	width: 85%;
 	max-width: 380px;
-	background-color: white;
+	background-color: hsl(0, 0%, 100%);
 	border-radius: 20px;
 	padding: 3rem 1.5rem;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	position: relative;
-	gap: 2rem;
 	margin-top: 4rem;
 }
 
 .faq-ctn h2 {
-	margin-top: 5rem;
+	padding-left: 35%;
 	font-size: 32px;
+	transform: translateY(-30px);
 }
 
-.illustration-shadow {
-	width: 60%;
-	height: 60%;
-	position: absolute;
-	background: hsla(273, 75%, 76%, 0.2);
-	border-radius: 25px;
-	transform: rotate(37deg) skew(-22deg);
-	top: -90px;
+.pattern {
+	display: none;
+}
+
+.pattern-mobile {
+	transform: translateY(-50px);
+}
+
+.box {
 	display: none;
 }
 
 .illustration-mobile {
 	top: -150px;
 	position: absolute;
+	max-width: 350px;
 }
 
 .illustration-desktop {
@@ -83,6 +86,10 @@ main {
 	color: hsl(237, 12%, 33%);
 }
 
+.question p:hover {
+	color: hsl(14, 88%, 65%);
+}
+
 .question .answer {
 	padding-top: 1rem;
 	font-size: 13px;
@@ -91,7 +98,84 @@ main {
 }
 
 .question img {
-	width: 15px;
-	height: 15px;
+	width: 10px;
+	height: 10px;
 	margin-left: 1rem;
+}
+
+@media screen and (max-width: 375px) {
+	.illustration-mobile {
+		transform: translateY(50px);
+	}
+	.pattern-mobile {
+		transform: translateY(-35px);
+	}
+}
+
+@media screen and (min-width: 1440px) {
+	.faq-ctn {
+		display: grid;
+		max-width: 950px;
+		grid-template-columns: 400px 350px;
+		grid-template-rows: 400px;
+		overflow: hidden;
+	}
+
+	.faq-ctn h2 {
+		transform: translateY(0);
+	}
+
+	.faq-ctn h2,
+	.faq-ctn .question {
+		transform: translateY(50px);
+	}
+
+	.box {
+		position: absolute;
+		z-index: 1000;
+		top: 47%;
+		transform: translateX(-480px);
+		display: block;
+	}
+
+	.illustration-mobile {
+		display: none;
+	}
+
+	.illustration-desktop {
+		position: absolute;
+		display: block;
+		left: -80px;
+		top: 10px;
+	}
+
+	.illustration-desktop-ctn {
+		overflow: hidden;
+		z-index: 2;
+		position: relative;
+		left: -25px;
+		height: 100%;
+		width: 100%;
+	}
+
+	.pattern {
+		position: absolute;
+		bottom: -70px;
+		left: -400px;
+		display: block;
+	}
+
+	.pattern-mobile {
+		display: none;
+	}
+
+	.questions-ctn {
+		position: relative;
+		bottom: 50px;
+		left: 60px;
+	}
+
+	.questions-ctn h2 {
+		margin-bottom: 1rem;
+	}
 }
